# icp_wallet

./: Cargo.toml  Makefile  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
scripts/: initalize_local_balance.sh  install.sh
src/ic_wallet_backend/: Cargo.toml  MakeFile  ic_wallet_backend.did
src/ic_wallet_backend/src/: lib.rs  types.rs
src/ic_wallet_backend/src/utils/: mod.rs
src/ic_wallet_frontend/assets/: main.css
src/ic_wallet_frontend/src/: index.html  index.js
src/ic_wallet_frontend/src/utils/: agent.js
