[package]
name = "ic_wallet_backend"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
ic-ledger-types = "0.1.0"
#generate_candid = { path = "../../generate_candid" }
#candid_gen = { git = "https://github.com/aliscie/autodox-libraries/candid_gen" }
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-timers = "0.1"
ic-cdk-macros = "0.6.0"
ic-types = "0.2.1"